package com.tjudream.designpattern.proxy.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-29 17:03
 *
 * @author mengxs@lenovocloud.com
 */
public class RealSubject implements Subject {
    @Override
    public void request() {

    }
}
